<resources>
    <string name="app_name">Graduation_project</string>
    <string name="hint_id">ID를 입력하세요</string>
    <string name="hint_password">패스워드를 입력하세요</string>
    <string name="hint_name">성명을 입력하세요</string>
    <string name="hint_mobileNO">휴대폰번호를 입력하세요</string>
    <string name="hint_email">이메일을 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_close">뒤로가기</string>
    <string name="recipe_material"> 소면,쫑쫑 썬 김치,삶은 계란, 채썬 오이</string>
    <string name="recipe_resentment">고추장 1큰술 ,고춧가루 1/2큰술,매실청 큰술,설탕 1/2큰술,참기름 1/2큰술,통깨 1/2큰술</string>
    <string name="recipe_content"> 1.양념장을 미리 만들어 두었어요.\n
        2.국수에 바로 해도 되는데 하다보면 간 맞추느라 국수가 불어나는 경우가 있는데 이렇게 미리 만들어 두면 수월하거든요.\n
        3.김치도 쫑쫑 썰어주세요.이건 선택이에요. 안넣어도 되고 집에 있는거 넣을 만한 것 있으면 넣으세요.팔팔 끓는 물에 국수를 넣는데요.\n
        5.국수가 화라락~ 끓어오르면 찬물을붓고, 또 다시 화라락~ 끓어오르면찬물을 한 번 더 붓고요, 끓어오르면 불 끄고 찬물로 갑니다.\n
        6.찬물에 아주 바락바락 헹구어 주세요.겉의 전분이 쏘옥! 빠지게요.\n
        7.양념 만들어 놓은 양푼에 삶은 국수 넣고 쫑쫑 썰어둔 김치를 넣고요,잘 버무려 줍니다.\n
        8.이 때 참기름이랑 좀 더 넣어주어도 됩니다. 이제 완성!</string>
    <string name="recope_material2">두부,양파,감자,호박,대파,청양고추</string>
    <string name="recope_restentment2">된장 2스푼, 마늘 1/2스푼, 물 6컵, 다시마,멸치</string>
    <string name="recope_content2">1. 재료:두부1/2모,양파1/2개,감자1/2개,호박1/3개,대파1/2개,청양고추2개 된장2스푼,마늘1/2스푼,물6컵,다시마,멸치등 (2인분기준으로조리했으며 계랑은 밥숟가락과 종이컵입니다)\n
    2. 우선 냄비에 물을 6컵을 넣고 다시다나 멸치등 있는재료를 이용해서 육수를 내줍니다. (15분정도 끓여주었어요) 물은 종이컵으로 6컵을 해도, 끓이는동안 증발이 되서 실제로는 4컵이나5컵정도의 양이 됩니다^^\n
    3. 두부1/2모,양파1/2개,감자1/2개,호박1/3개,대파1/2개,청양고추2개를 먹기 좋은 크기로 잘라서 준비합니다.\n
    4. 역시 된장찌개는 뚝배기에 해서 먹어야 제맛이죠 멸치육수낸물에 된장을 2스푼을 풀어서 넣어줍니다. 고추장과 달리 된장은 가정에서 쓰시는 된장에 따라서 맛과 간이 틀리니 꼭 처음에는 된장을 1스푼정도만 넣고 끓이다가 간을 맞추어주세요.\n
    5. 감자를 먼저 넣어줍니다. 감자를 넣고 2분정도 더끓여주면!\n
    6.양파와 호박을 넣어주세요.\n
    7. 그리고 마늘1/2스푼을 넣고\n
    8. 청양고추와 대파를 넣어서 조금더 끓여줍니다. 여기서 간을 한번더 봐주신후 부족하다싶으면 된장을 더 풀어주면 됩니다. 물론 짜다면 육수를 더넣으시면 되구요^^\n
    9. 불을 끄기전 두부를 넣고\n
    10. 고추가루 1/2스푼을 넣고 30초만 더끓여주면!!\n
    11. 보글보글 된장찌개 완성입니다!!! 뭐 사실 재료에 순서없이 다넣고 한꺼번에 호로록 끓여도 된다지요! </string>
    <string name="recope_material3">식빵,토마토,베이컨,샌드위치용햄,홀그레인머스타드,양상추,파프리카,치즈,딸기잼</string>
    <string name="recipe_content3">1. 양상추를 흐르는 물에 깨끗히 씻어 음식 탈수기에 넣고 물기를 제거해요. 가급적이면 물기가 없어야 샌드위치 완성후 빵이 눅눅해지지 않습니다.\n
    2. 토마토를 약 0.5~1cm 두께로 썰어주세요. 그리고 파프리카도 얇게 썰어주세요\n
    3. 베이컨은 팬에 앞뒤로 살짝 구워주시고, 햄은 샌드위치에 넣는 생식용으로 구입해서 그대로 사용할 거에요.\n
    4. 샌드위치 빵을 토스터기에 노릇하게 구워주세요. 토스터기가 없으시다면 프라이팬을 이용해도 되구요.\n
    5. 구워진 샌드위치 빵 한면에는 딸기쨈이나 포도쨈을 넓게 펴바르고, 또 다른 빵 한면에는 홀그레인 머스타드 소스를 넓게 펴발라 주세요.\n
    6. 준비한 샌드위치 식빵에 이제 재료들을 하나씩 올려줍니다. 먼저 양상추와 햄, 구워진 베이컨을 올렸어요.
햄이 생식용이 아니라면 햄도 팬에 살짝 구워서 올려주시구요~
치즈, 파프리카, 토마토를 올려줍니다. 그리고, 남은 샌드위치용 식빵 한개로 마무리해주면 완성입니다.</string>
    <string name="recope_material4">파스타면 250g,시판파스타소스 1병,통마늘 10쪽,양송이 버섯 5게,방울토마토 10개,올리브유,파머산치즈가루,베이컨 110g,소세지 2개,양파1/2개,소금 약간, 파슬리 가루 적당량</string>
    <string name="recipe_content4">1. 스파게티면을 250g을 준비해주세요.\n
    2.파슬리가루와 파머산치즈가루는 없으면 패스하셔도 상관없어요. 스파게티소스는 시판용을 가지고 조리했습니다~^^\n
    3. 제일 먼저 끓는물에 소금1/2티스푼,올리브유1티스푼을 넣고~\n
    4. 스파게티면을 8분정도 삶아주었어요 개인차가 있겠지만 저는 8분정도 끓여주어야 꼬들하니 식감이 좋더라구요^^ 8분이 지난 스파게티면은 찬물에 헹구지 말고 체에 걸러서 물기만 제거해주세요.\n
    5. 브로콜리는 1송이를 먹기 좋은 크기로 잘라준뒤 끓는물에 소금1/2티스푼을 넣고 살짝 데쳐준뒤 찬물에 헹구어서 준비합니다.\n
    6. 방울토마토,통마늘,양송이버섯,햄,베이컨,양파를 먹기 좋은 크기로 잘라서 준비합니다.\n
    7. 넓은 팬에 올리브유 1스푼을 넣고 마늘과 양파를 넣어 양파가 투명해질때까지 볶아주세요.\n
    8. 양파가 투명해지면 베이컨과 햄을 넣고 볶아줍니다.\n
    9. 베이컨이 쪼그라드는 느낌이 나면 시판 소스와 토마토,양송이버섯,브로콜리를 넣고 섞어주세요.\n
    10. 여기에 삶아 놓았던 스파게티면을 넣고 잘 섞어주면~!\n
    11. 시판 소스를 이용한 토마토스파게티 완성입니다!</string>
    <string name="recope_material5">소갈비 2.2kg,깐밤 1컵,당근 1개,무(2cm) 2토막,표고버섯 4개</string>
    <string name="recope_restentment5">배(갈음) 1/2개,양파(갈음)1/2개,진간장 3/4컵,물 1컵,설탕 1/2컵,참기름 1/2컵,다진마늘 2큰술,대파(송송썸) 1개,생강가루(생락가능) 1/2큰술,올리브당 3큰술,후추 1큰술</string>
    <string name="recipe_content5">1. 갈비는 물에 넣고 핏물을 뺍니다. 물을 갈아가며 충분히 빼면 더욱 좋아요.\n
    2. 핏물 거의 빠졌을 때 양념장을 만드는데요. 배와 양파를 갈고\n
    3. 양념장의 모든 재료를 한데 넣고 잘 섞어줍니다.\n
    4. 당근,밤,무,버섯등 먹기 좋게 정리를 합니다. 당근,무는 모소리를 둥글려주면 서로 부딪히지도 않고 먹기도 좋습니다.\n
    5. 핏물을 뺀 갈비는 끓는 물에 넣고 불순물과 나머지 핏물을 더 뺍니다. 오래 끓이는 건 아니고, 위로 거품이 핏물이 떠오르고 색깔이 변화면 1분내로 끓이고 바로 불 끕니다. 센불이여야 합니다\n
    6. 찬물에 헹구면서 뼈 쪽의 불순물은 깨끗이 씻어주세요\n
    7. 끓일 냄비에 불을 올리고 갈비를 담고 양념장을 붓습니다. 센불을 이용합니다/\n
    8. 뒤적여가면 잘 섞어 주세요. 보이는 파는 나중에 하나도 안보입니다.\n
    9. 어느 정도 익으면 뚜겅을 닫고 푹 익혀줍니다. 거의 1시간 이상. 중간에 뚜겅 열어 뒤적여주세요 센불에서 중불로\n
    10. 거의 완성될 무렵 썰어놓은 채소들 넣어주세요\n
    11. 잘 섞은 다음 무,당근,밤잉 익으면 소갈비찜 완성입니다.</string>
    <string name="recope_material6">소고기안심 650g,맛밤 70g,마늘 6개,패스트리생지,로즈마리,소금,머스터드 소스,새송이버섯 15개,양파 1개,올리브유,타임,하몽,후주,계란물</string>
    <string name="recipe_content6">1. 양송이버섯,마늘,맛밤을 잘게 썰어주세요.\n
    2. 다지기나 프로세스를 이용하여 다져주세요.\n
    3. 양파를 잘게 다져주세요.\n
    4. 마늘팬에 양파를 살짝 볶아 수분을 제거해주세요.\n
    5. 세송이버섯 다진것을 넣고 약불에서 수분을 제거해주세요.\n
    6. 타임,소금,후추로 간을 해주세요.\n
    7. 뤽쉘을 펼쳐서 식혀주세요.\n
    8. 고기의 근막과 지방을 제거해주세요.\n
    9. 후주롸 소금을 뿌려주세요.\n
    10. 올리브유를 두른 팬에 로즈마리를 넣고 고기의 사면을 살짝 구워주세요.\n
    11. 뜨거운 상태에서 머스터드소스를 발라주세요.\n
    12. 머스터드소스가 배이도록 식혀주세요.\n
    13. 랲위에 하몽을 얹고 뤽쉘을 발라주세요.\n
    14. 중앙에 고기를 얹어주세요.\n
    15. 랲을 이용하여 고기를 감싸주세요.\n
    16. 랲을 단단히 조여 냉장고에서 15분간 휴지시켜주세요.\n
    17. 랲위에 페이스트리생지를 얹고 중앙에 고기를 올려주세요.\n
    18. 랲을 이용하여 페이스트리생지를 고기 전면에 덮어주세요.\n
    19. 단단히 랩을 조여 말아주세요.\n
    20. 반나절 냉장보관해주세요.\n
    21. 계란물을 발라주세요.\n
    22. 190°에서 40분간 구워주세요</string>
    <string name="open_link">Open Link</string>
    <string-array name="food_items">
        <item>비빔국수</item>
        <item>샌드위치</item>
        <item>된장찌개</item>
        <item>토마토 파스타</item>
        <item>갈비찜</item>
        <item>비프 웰리턴</item>
    </string-array>
</resources>